# rust_back_front_yew

./: README.md
back/: .env  Cargo.toml  README.md  database.sql
back/src/: db.rs  handlers.rs  main.rs  models.rs
front/: Cargo.toml  README.md  style.scss
front/src/: form.rs  get.rs  main.rs
