[package]
name = "rust_front"
version = "0.1.0"
authors = ["javier"]
edition = "2021"

[dependencies]
yew = "0.19"
web-sys = { version = "0.3", features = ["Event","EventTarget","InputEvent"] }
js-sys = "0.3.46"
wasm-bindgen = "0.2"

#reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"

reqwasm = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
